--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 revize.entityId =revize_rithuiky
-revize.idpUrl=http://idp.ssocircle.com/
+#revize.idpUrl=http://idp.ssocircle.com/
+revize.idpUrl=StaffordCounty_FederationMetadata.xml
 revize.successUrl=/home
